tests/type-checking/comparison/fail/ge_bool_int_fail.xdsl
// RUN: choco-opt -p check-assign-target,name-analysis,type-checking %s | filecheck %s

// 
// True >= 0
// 


builtin.module() {
  choco.ast.program() {} {
    choco.ast.binary_expr() ["op" = ">="] {
      choco.ast.literal() ["value" = !choco.ast.bool<True>]
    } {
      choco.ast.literal() ["value" = 0 : !i32]
    }
  }
}
// CHECK: Semantic error:
